--- a/docs/stories/4.13.top-bar-ui-cleanup-agent-notification.md
+++ b/docs/stories/4.13.top-bar-ui-cleanup-agent-notification.md
@@ -1,7 +1,7 @@
 # Story 4.13: Top Bar UI Cleanup and Agent Notification Enhancement
 
 ## Status
-Ready for Review
+In Progress (Hardening & Real-Time Reliability Enhancements)
 
 ## Story
 **As a** support agent using the Issue Manager dashboard,
@@ -22,6 +22,11 @@ Ready for Review
 11. Notification state persists until user acknowledges or views the conversation
 12. Multiple notifications are properly managed (show count, list recent senders)
 13. **ENHANCED**: Only show notifications for conversations assigned to the specific agent
+14. **ENHANCEMENT**: Notifications are grouped by conversation, showing only the latest message per conversation
+15. **ENHANCEMENT**: Badge displays conversation count rather than total message count for better scalability
+16. **ENHANCEMENT**: Only customer messages trigger notifications (agent responses and system messages are filtered out)
+17. **ENHANCEMENT**: Individual conversations show unread message count when multiple messages are pending
+18. **ENHANCEMENT**: Single click on conversation notification marks all messages as read and navigates to conversation
 
 ## Tasks / Subtasks
 - [x] **Task 1: Remove Top Bar UI Elements** (AC: 1, 2, 3)
@@ -61,6 +66,100 @@ Ready for Review
   - [x] Ensure responsive design compatibility
   - [x] Test component placement across different screen sizes
   - [x] Update layout CSS classes as needed
+
+- [x] **Task 5.2: Implement Conversation-Grouped Notifications** (AC: 14, 15, 16, 17, 18)
+  - [x] Create `ConversationNotification` model for grouped notification data
+  - [x] Implement `GetGroupedNotifications()` method to group notifications by conversation ID
+  - [x] Update UI to display conversation cards instead of individual message notifications
+  - [x] Add conversation-level unread count badges for multiple messages per conversation
+  - [x] Implement `GetConversationCount()` for badge display using conversation count vs message count
+  - [x] Filter notifications to only show user messages (exclude agent responses and system messages)
+  - [x] Add `HandleConversationNotificationClick()` to mark entire conversations as read
+  - [x] Update notification logic to only trigger for customer messages, not agent or system messages
+  - [x] Test conversation grouping with multiple messages per conversation
+  - [x] Validate badge count reflects conversation count, not total message count
+### Post-Implementation Defect Fix (Real-Time Notification Persistence)
+_Documenting remediation already applied prior to hardening tasks._
+
+- [x] **Task 5.1: Root Cause Isolation & Stability Patch**
+  - [x] Identified two root causes for missing notifications after navigation: (1) conversation components leaving SignalR groups on dispose, (2) broad `HubConnection.Remove("Handler")` calls in `ConversationDetail` removing handlers owned by `NotificationIndicator`.
+  - [x] Replaced direct `HubConnection.Remove(...)` calls with scoped per-handler `IDisposable` registrations inside `ConversationDetail` so disposal is localized.
+  - [x] Stopped issuing `LeaveConversationGroup` on component/page dispose; groups now persist until a `ConversationCompleted` event (ensures off-page notifications).
+  - [x] Validated off-page notification delivery (navigate away → send test message/escalation → badge increments correctly).
+  - [x] Added tolerant parsing for dual message payload formats (DTO + generic object) preventing silent handler failures.
+  - [x] Introduced temporary structured logging markers (Join / HandlerRegistered / HandlerInvoked) to aid verification.
+  - [ ] Convert temporary logs to standardized EventIds (captured in Task 10).
+
+---
+
+### Hardening & Reliability Follow-Up (Post Initial Acceptance Scope)
+
+These tasks extend Story 4.13 to address resilience, architectural cleanliness, and prevention of regression for real‑time notifications discovered during investigative debugging after initial implementation.
+
+- [ ] **Task 6: Centralize Conversation Group Management**
+  - [ ] Define `IConversationGroupService` abstraction
+  - [ ] Implement `ConversationGroupService` (singleton) with:
+    - In‑memory tracking of joined conversation group IDs (thread-safe)
+    - `EnsureJoinedAsync(conversationId)` (idempotent)
+    - `LeaveIfMarkedCompletedAsync(conversationId)` / `LeaveAsync` (only on completion or explicit release)
+    - `RejoinAllAsync()` for reconnection scenarios
+    - Logging (Join, AlreadyJoined, Rejoin, Leave, SkipLeave)
+  - [ ] Register in DI (Singleton) and integrate with existing `SignalRConnectionService`
+  - [ ] Migrate `NotificationIndicator.razor` to use service (remove local `_joinedGroups` state)
+  - [ ] Replace direct `HubConnection.Remove(...)` usage with scoped `IDisposable` handler registrations
+  - [ ] (Optional) Prepare future adoption in `ConversationDetail` / other components (no premature group leave)
+
+- [ ] **Task 7: Reconnection Resilience & Event Lifecycle**
+  - [ ] Add handler for `HubConnection.Reconnected` / `Closed` → invoke `ConversationGroupService.RejoinAllAsync()`
+  - [ ] Add exponential backoff retry for join failures (log warnings)
+  - [ ] Add structured log scope `ConversationGroups` for correlation
+  - [ ] Surface minimal UI diagnostic (dev mode only) to show: connection state, joined group count
+
+- [ ] **Task 8: Event Stream Consolidation & Legacy Cleanup**
+  - [ ] Audit dual message event handlers (`NewMessageReceived` DTO + object fallback + legacy `NewConversationMessage`)
+  - [ ] Remove legacy / fallback handler once DTO path validated across browsers (retain structured logging proof)
+  - [ ] Consolidate escalation and completion events semantics (consistent payload shape)
+  - [ ] Remove temporary test endpoints (`test-notification`, `test-escalation`) or guard behind `IHostEnvironment.IsDevelopment()`
+  - [ ] Update documentation (real‑time flow diagram + handler lifecycle policy)
+
+- [ ] **Task 9: Automated Testing & Regression Shielding**
+  - [ ] Unit tests: `ConversationGroupService` (idempotent joins, rejoin after simulated disconnect, leave-on-completion)
+  - [ ] bUnit component test: `NotificationIndicator` reconnection scenario (simulate dropped connection → rejoin + notification received)
+  - [ ] Integration test: Assigned conversation event triggers join then message appears as notification
+  - [ ] Load test (lightweight) simulating N (e.g., 25) concurrent conversation assignments → ensure service set size accuracy
+  - [ ] Snapshot test for notification list rendering (multiple senders, blinking badge state)
+
+- [ ] **Task 10: Observability & Logging Enhancements**
+  - [ ] Add structured log events (EventIds) for Join/Leave/Rejoin/HandlerRegistered/HandlerDisposed
+  - [ ] Add debug toggle (appsettings.Development.json) to enable verbose SignalR trace forwarding
+  - [ ] (Optional) Add minimal `/diagnostics/realtime` Razor page gated by role/ENV
+
+- [ ] **Task 11: Documentation Updates**
+  - [ ] Update Story 4.13 acceptance appendix with resilience considerations
+  - [ ] Add architecture note: "Real-Time Group Membership Lifecycle" (diagram) under `docs/architecture/components.md`
+  - [ ] Add troubleshooting section (symptoms: missing notifications after navigation; causes; verification steps)
+
+---
+
+### Extended Acceptance Criteria (Supplemental)
+14. Group membership is centralized and idempotent (no duplicate join calls).
+15. A reconnection automatically restores all previously joined conversation groups within < 2 seconds (under normal network conditions).
+16. No component issues a broad `HubConnection.Remove(handlerName)` that unintentionally deregisters global handlers.
+17. Legacy / duplicate message event handlers are eliminated or clearly flagged behind a development-only path.
+18. Unit and component tests enforce notification persistence across navigation + reconnection.
+19. Diagnostic logging allows tracing a notification from message event → group membership confirmation → UI badge increment.
+20. Group leave only occurs after conversation completion (or explicit administrative release), never merely on navigation away.
+
+### Risk Mitigations
+- Central service prevents accidental premature `LeaveConversationGroup` calls.
+- Scoped disposables eliminate broad handler removal side effects.
+- Rejoin pathway covers transient network blips and app restarts.
+- Tests codify regression barriers for future refactors.
+
+### Out-of-Scope (Deferred)
+- Persistent (database) storage of joined groups across server restarts (current in-memory acceptable for session scope)
+- Cross-tab synchronization for multi-browser-agent setup
+- Full real-time analytics dashboard (basic diagnostics only in this iteration)
 
 ## Dev Notes
 
@@ -122,6 +221,9 @@ Test Requirements:
 | Date | Version | Description | Author |
 |------|---------|-------------|---------|
 | 2025-01-08 | 1.0 | Initial story creation | Scrum Master |
+| 2025-09-08 | 1.1 | Added hardening & real-time reliability tasks (Tasks 6–11) | Dev Agent |
+| 2025-09-08 | 1.2 | Documented completed defect remediation (Task 5.1) | Dev Agent |
+| 2025-01-09 | 1.3 | Added conversation-grouped notifications implementation (Task 5.2, AC 14-18) | Dev Agent |
 
 ## Dev Agent Record
 *This section will be populated by the development agent during implementation*
@@ -144,6 +246,7 @@ Claude-3.5-Sonnet
 - [x] Task 3: Integrate Notification with SignalR (Completed)
 - [x] Task 4: Implement Navigation to Conversations (Completed)
 - [x] Task 5: Update Layout Integration (Completed)
+- [x] Task 5.2: Implement Conversation-Grouped Notifications (Completed - 2025-01-09)
 
 **Implementation Summary:**
 - Successfully removed language selector, GitHub integration, and RTL toggle from top bar
@@ -154,6 +257,24 @@ Claude-3.5-Sonnet
 - Enhanced with conversation assignment tracking via `ConversationAssigned` and `ConversationCompleted` events
 - Only shows escalation and customer message notifications for conversations the agent owns
 - Message icon blinks when new notifications arrive and stops when acknowledged
+
+**MAJOR ENHANCEMENT (2025-01-09)**: Conversation-Grouped Notifications
+- **Conversation Grouping**: Notifications now group by conversation ID instead of showing individual messages
+- **Latest Message Preview**: Shows only the most recent message per conversation with sender and timestamp
+- **Unread Count Display**: Badge shows conversation count (not total messages) with per-conversation unread counts
+- **Scalable UI**: Maximum 10 conversations displayed instead of overwhelming individual message list
+- **One-Click Navigation**: Clicking a conversation notification marks ALL messages as read and navigates to conversation
+- **User Message Filtering**: Only shows notifications for actual customer messages (filters out agent responses and system notifications)
+- **Smart Badge Logic**: Badge displays conversation count with individual conversation unread indicators
+- **Improved Performance**: Significantly reduced UI complexity and memory usage with grouped approach
+
+**Technical Implementation Details:**
+- Added `ConversationNotification` model for grouped display
+- Implemented `GetGroupedNotifications()` for conversation-based grouping
+- Updated badge count logic to use `GetConversationCount()` instead of total message count
+- Enhanced UI with conversation cards showing latest message, sender, timestamp, and unread count
+- Added `HandleConversationNotificationClick()` for one-click conversation resolution
+- Integrated `ConversationViewed` SignalR event for automatic read status management
 - All acceptance criteria met and validated through successful build
 - Component follows established coding standards and MudBlazor patterns
 
